package com.example.todofinal.adapter;

import com.example.todofinal.model.Todo;

public interface OnTodoClickListener {
    void onTodoClick(Todo todo);
    void onTodoRadioBtnClick(Todo todo);
}
