package com.example.todofinal.model;

public enum Priority {
    HIGH,
    MEDIUM,
    LOW
}
