@startuml

title __TODO_FINAL.APP's Class Diagram__\n

  namespace com.example.todofinal {
    class com.example.todofinal.AboutActivity {
    }
  }
  

  namespace com.example.todofinal {
    class com.example.todofinal.BottomSheetFragment {
    }
  }
  

  namespace com.example.todofinal {
    class com.example.todofinal.BuildConfig {
    }
  }
  

  namespace com.example.todofinal {
    class com.example.todofinal.MainActivity {
    }
  }
  

  namespace com.example.todofinal {
    class com.example.todofinal.RateAppFragment {
    }
  }
  

  namespace com.example.todofinal {
    namespace adapter {
      interface com.example.todofinal.adapter.OnTodoClickListener {
      }
    }
  }
  

  namespace com.example.todofinal {
    namespace adapter {
      class com.example.todofinal.adapter.TodoAdapter {
      }
    }
  }
  

  namespace com.example.todofinal {
    namespace data {
      interface com.example.todofinal.data.TodoDao {
      }
    }
  }
  

  namespace com.example.todofinal {
    namespace data {
      class com.example.todofinal.data.TodoDao_Impl {
      }
    }
  }
  

  namespace com.example.todofinal {
    namespace data {
      class com.example.todofinal.data.TodoRepository {
      }
    }
  }
  

  namespace com.example.todofinal {
    namespace model {
      enum Priority {
      }
    }
  }
  

  namespace com.example.todofinal {
    namespace model {
      class com.example.todofinal.model.SharedViewModel {
      }
    }
  }
  

  namespace com.example.todofinal {
    namespace model {
      class com.example.todofinal.model.Todo {
      }
    }
  }
  

  namespace com.example.todofinal {
    namespace model {
      class com.example.todofinal.model.TodoViewModel {
      }
    }
  }
  

  namespace com.example.todofinal {
    namespace util {
      class com.example.todofinal.util.Converter {
      }
    }
  }
  

  namespace com.example.todofinal {
    namespace util {
      abstract class com.example.todofinal.util.TodoRoomDatabase {
      }
    }
  }
  

  namespace com.example.todofinal {
    namespace util {
      class com.example.todofinal.util.TodoRoomDatabase_Impl {
      }
    }
  }
  

  namespace com.example.todofinal {
    namespace util {
      class com.example.todofinal.util.Utils {
      }
    }
  }
  

  com.example.todofinal.AboutActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.todofinal.BottomSheetFragment .up.|> android.view.View.OnClickListener
  com.example.todofinal.BottomSheetFragment -up-|> com.google.android.material.bottomsheet.BottomSheetDialogFragment
  com.example.todofinal.BottomSheetFragment o-- com.example.todofinal.model.Priority : priority
  com.example.todofinal.BottomSheetFragment o-- com.example.todofinal.model.SharedViewModel : sharedViewModel
  com.example.todofinal.MainActivity .up.|> com.example.todofinal.adapter.OnTodoClickListener
  com.example.todofinal.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.todofinal.MainActivity o-- com.example.todofinal.BottomSheetFragment : bottomSheetFragment
  com.example.todofinal.MainActivity o-- com.example.todofinal.model.SharedViewModel : sharedViewModel
  com.example.todofinal.MainActivity o-- com.example.todofinal.adapter.TodoAdapter : todoAdapter
  com.example.todofinal.RateAppFragment -up-|> androidx.fragment.app.Fragment
  com.example.todofinal.adapter.TodoAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.todofinal.adapter.TodoAdapter o-- com.example.todofinal.adapter.OnTodoClickListener : todoClickListener
  com.example.todofinal.data.TodoDao_Impl .up.|> com.example.todofinal.data.TodoDao
  com.example.todofinal.data.TodoRepository o-- com.example.todofinal.data.TodoDao : todoDao
  com.example.todofinal.model.SharedViewModel -up-|> androidx.lifecycle.ViewModel
  com.example.todofinal.model.Todo o-- com.example.todofinal.model.Priority : priority
  com.example.todofinal.model.TodoViewModel -up-|> androidx.lifecycle.AndroidViewModel
  com.example.todofinal.util.TodoRoomDatabase -up-|> androidx.room.RoomDatabase
  com.example.todofinal.util.TodoRoomDatabase_Impl -up-|> com.example.todofinal.util.TodoRoomDatabase
  com.example.todofinal.util.TodoRoomDatabase_Impl o-- com.example.todofinal.data.TodoDao : _todoDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
